--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Drum Kit</title>
+  <title>pixel drum beats</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="icon" type="image/gif" href="images/heart_fav.png"/>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
   <footer>
     Made with <img src="images/heart.gif" alt="love"> in Seattle.
   </footer>
-  
+
   <script src="index.js"></script>
 </body>
 
